View Layer - Search not working #59322

Closed
opened 2018-12-13 17:28:34 +01:00 by Marcus Papathoma · 10 comments

System Information
Operating system:
Windows 10 x64
Graphics card:
Nvidia Geforce GTX 1080Ti

Blender Version
Broken: 2.80, 7d4d9e9dbd

Short description of error
The Search in the View Layer drop down menu isn´t working

Exact steps for others to reproduce the error
Open the attached blend file.
Open the View Layer popup and write "Test" into the search field. Nothing happens.
The first View Layer ist called test.
View_Layer_search_bug.blend
View_Layer_search_bug.jpg

**System Information** Operating system: Windows 10 x64 Graphics card: Nvidia Geforce GTX 1080Ti **Blender Version** Broken: 2.80, 7d4d9e9dbd3 **Short description of error** The Search in the View Layer drop down menu isn´t working **Exact steps for others to reproduce the error** Open the attached blend file. Open the View Layer popup and write "Test" into the search field. Nothing happens. The first View Layer ist called test. [View_Layer_search_bug.blend](https://archive.blender.org/developer/F5943340/View_Layer_search_bug.blend) ![View_Layer_search_bug.jpg](https://archive.blender.org/developer/F5943354/View_Layer_search_bug.jpg)

Added subscriber: @machieb

Added subscriber: @machieb
Dalai Felinto self-assigned this 2018-12-14 12:40:49 +01:00

Basically when we get to ui_rna_collection_search_cb skip_filter is always true because in those cases data->but_changed is NULL for those buttons.

Basically when we get to `ui_rna_collection_search_cb` skip_filter is always true because in those cases `data->but_changed` is NULL for those buttons.

Tempted to remove the skip_filter altogether, or at least to never skip when there is no but_changed.
For the records, this works: P870

The way we are using this "but_changed" seems wrong anyways.

Tempted to remove the skip_filter altogether, or at least to never skip when there is no but_changed. For the records, this works: [P870](https://archive.blender.org/developer/P870.txt) The way we are using this "but_changed" seems wrong anyways.

Added subscribers: @brecht, @JulianEisel

Added subscribers: @brecht, @JulianEisel

@brecht are you familiar with this code? Have any opinion around which way to go?

@brecht are you familiar with this code? Have any opinion around which way to go?

I hadn't seen this code before.

To me it seems but_changed should be removed, and filtering should only depend on str being empty or not.

I hadn't seen this code before. To me it seems `but_changed` should be removed, and filtering should only depend on `str` being empty or not.

Although, I guess but_changed is needed for the case there is already a value in the text field, like when clicking to select a different bone?

In the search menu probably always setting it to true is ok as a fix.

Although, I guess `but_changed` is needed for the case there is already a value in the text field, like when clicking to select a different bone? In the search menu probably always setting it to true is ok as a fix.

This issue was referenced by fc74903f27

This issue was referenced by fc74903f272a01784e0376c9ee12c2673017285d

You are right, but_changed is needed for those cases. Committing an alternative fix.

You are right, `but_changed` is needed for those cases. Committing an alternative fix.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59322
No description provided.