source/blender/editors/interface/interface_utils.c
@@ -255,7 +255,7 @@ void ui_rna_collection_search_cb(const struct bContext *C, void *arg, const char
 	int i = 0, iconid = 0, flag = RNA_property_flag(data->target_prop);
 	ListBase *items_list = MEM_callocN(sizeof(ListBase), "items_list");
 	CollItemSearch *cis;
-	const bool skip_filter = !(data->but_changed && *data->but_changed);
+	const bool skip_filter = (data->but_changed && !(*data->but_changed));
 
 	/* build a temporary list of relevant items first */
 	RNA_PROP_BEGIN (&data->search_ptr, itemptr, data->search_prop)
